# NumericalAnalysis

./: .gitignore  2.txt  3.txt  5.txt  CMakeLists.txt  README.md  main.cpp
Chapter2/: LinearEquations.h
Chapter3/: MatrixEigenvaluesAndEigenvectors.cpp  MatrixEigenvaluesAndEigenvectors.h
Chapter4/: NonlinearEquations.cpp  NonlinearEquations.h
Chapter5/: InterpolationAndApproximation.cpp  InterpolationAndApproximation.h
Chapter6/: NumericalIntegration.cpp  NumericalIntegration.h
Type/: Type.h
include/Type/: Type.h
lib/: MatrixOperation.h  OrthogonalPolynomial.cpp  OrthogonalPolynomial.h  Polymerization.cpp  Polymerization.h  fun.h
